--- a/src/App.css
+++ b/src/App.css
@@ -576,6 +576,47 @@ input#PortalUpload {
     flex-basis: 132px;
 
 }
+.photograph-popup-outer {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display:none;
+}
+.photograph-popup-outer.show {
+    display: flex;
+}
+.photo-popup {
+    width:75%;
+    height:70vh;
+    background-color: #fff;
+    position: relative;
+}
+.popup-close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    color: #000;  
+    cursor:pointer;    
+}
+.photopopup-trigger {
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
 @media (max-width:991px) {
     .upload-property-outer {
         max-width: 95%;
