--- a/src/App.css
+++ b/src/App.css
@@ -594,10 +594,16 @@ input#PortalUpload {
     display: flex;
 }
 .photo-popup {
-    width:75%;
-    height:70vh;
+    width: 75%;
+    /* height: 70vh; */
     background-color: #fff;
     position: relative;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+.click-sample {
+    cursor: pointer;
 }
 .popup-close {
     position: absolute;
@@ -610,7 +616,8 @@ input#PortalUpload {
     cursor: pointer;
 }
 .pop-image img {
-    width:100%;
+    height:100%;
+    width:auto;
     
 }
 .pop-image {
@@ -625,8 +632,15 @@ input#PortalUpload {
 .pop-slider-wrap {
     padding: 20px;
 }
+.carousel .control-dots {   
+    display: none;
+}
 
-
+.carousel .thumbs-wrapper {
+    margin: 20px;
+    overflow: hidden;
+    display: none;
+}
 
 
 
